--- a/index.html
+++ b/index.html
@@ -45,13 +45,11 @@
     </header>
     <section class="container-modal-add-task" id="containerModalAddTask">
       <div class="content-modal-add-task" id="contentModalAddTask">
-        <p>hi there</p>
-        <form action="">
-          <label for="tasktitle">Task:</label><br />
+        <form class="modal-form" action="">
+          <label for="tasktitle">Task:</label>
           <input type="text" id="tasktitle" name="tasktitle" /><br />
           <br />
-          <label for="">Select Task Quadrant</label> <br />
-          <br />
+          <label for="">Select Task Quadrant</label>
           <select name="tasktype" id="tasktype">
             <option value="do-now">Do Now</option>
             <option value="do-later">Do Later</option>
