Complete for now :)

--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
       </div> -->
       <div class="container-account">
           <button class="menu-left-button" id="btnAddTask">Add Task</button>
-        <a class="account-button" href="#">Account</a>
+        <a class="account-button" href="#" id="accountButton">Account</a>
       </div>
-      <div class="menu-account">
-        <button class="close-menu">&times;</button>
+      <aside class="menu-account" id="menuAccount">
+        <button class="close-menu" id="closeMenu">&times;</button>
         <ul class="account-menu-dropdown">
           <li class="menu-account-list-item">Profile</li>
           <li class="menu-account-list-item">Manage Your Account</li>
           <li class="menu-account-list-item">Sign Out</li>
         </ul>
-      </div>
+      </aside>
     </header>
     <section class="container-modal-add-task" id="containerModalAddTask">
       <div class="content-modal-add-task" id="contentModalAddTask">
